# graphite

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  remake.bat  run.bat
cfg/: Config.h
graphite/: main.cpp
graphite/core/: Application.cpp  Application.h  CommonTypes.h  ECSRegistry.h  Engine.cpp  Engine.h  ISystem.h  SceneManager.cpp  SceneManager.h  ServiceLocator.cpp  ServiceLocator.h  SystemManager.cpp  SystemManager.h
graphite/ecs/: ECSRegistry.h  MeshComponent.h  RenderableComponent.h  TransformComponent.h
graphite/input/: InputManager.cpp  InputManager.h
graphite/managers/: AssetManager.cpp  AssetManager.h  DeviceManager.cpp  DeviceManager.h
graphite/platform/: PlatformWindow.cpp  PlatformWindow.h
graphite/rendering/: Camera.h  ConstantBuffers.h  GBuffer.cpp  GBuffer.h  Lighting.h  Material.h  Mesh.h  Renderer.cpp  Renderer.h  RendererSetup.cpp  RendererSetup.h  Vertex.h
graphite/resources/: ResourceManager.cpp  ResourceManager.h
graphite/systems/: CameraController.cpp  CameraController.h  InputSystem.h  RenderSystem.cpp  RenderSystem.h  ResizeSystem.cpp  ResizeSystem.h  StatsSystem.cpp  StatsSystem.h
shaders/: GeometryPS.hlsl  GeometryVS.hlsl  LightingPS.hlsl  LightingVS.hlsl
utils/: ImGuiConfig.h  Logger.cpp  Logger.h  ShaderUtils.cpp  ShaderUtils.h
